--- a/backend/package.json
+++ b/backend/package.json
@@ -47,6 +47,7 @@
     "inherits": "^2.0.4",
     "ipaddr.js": "^1.9.1",
     "javascript-natural-sort": "^0.7.1",
+    "jsonrepair": "^3.13.2",
     "math-intrinsics": "^1.1.0",
     "mathjs": "^12.4.3",
     "media-typer": "^0.3.0",
